--- a/package.json
+++ b/package.json
@@ -14,28 +14,33 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.2.0",
-    "grunt-browserify": "^5.2.0",
-    "grunt-concat-css": "^0.3.1",
-    "grunt-contrib-clean": "^1.0.0",
+    "grunt-browserify": "^5.3.0",
+    "grunt-concat-css": "^0.3.2",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-compress": "^0.14.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^1.0.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-curl": "^2.2.0",
+    "grunt-curl": "^2.5.0",
     "grunt-ftp-deploy": "^0.1.10",
-    "grunt-jsbeautifier": "^0.2.12",
+    "grunt-jsbeautifier": "^0.2.13",
     "grunt-php": "^1.5.1",
     "grunt-postcss": "^0.8.0",
-    "grunt-sass": "^1.1.0",
+    "grunt-sass": "^2.1.0",
     "grunt-svgmin": "^4.0.0",
-    "grunt-zip": "^0.17.1"
+    "grunt-zip": "^0.17.1",
+    "load-grunt-config": "^0.19.2",
+    "load-grunt-tasks": "^3.5.2",
+    "node-sass": "^4.11.0"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.5",
+    "autoprefixer": "^8.6.5",
+    "bootstrap": "^4.2.1",
+    "cssnano": "^3.10.0",
     "dropbox": "^2.5.10"
   }
 }
