--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,12 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "modernizr": "^3.3.1",
+  "devDependencies": {
+    "waypoints": "^4.0.1",
     "jquery": "^3.1.1",
     "bootstrap": "v4.0.0-alpha.6",
     "SpinKit": "spinkit#^1.2.5",
     "css-hamburgers": "^1.1.3",
-    "waypoints": "^4.0.1",
+    "waypoints": "^4.0.1"
   }
 }
