--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,6 @@
     "bootstrap": "v4.0.0-alpha.6",
     "SpinKit": "spinkit#^1.2.5",
     "css-hamburgers": "^1.1.3",
-    "waypoints": "^4.0.1"
+    "jquery-migrate": "^3.0.0"
   }
 }
